Scroll jump fix

--- a/docroot/themes/custom/mass_admin_theme/css/overrides/layout-paragraphs.css
+++ b/docroot/themes/custom/mass_admin_theme/css/overrides/layout-paragraphs.css
@@ -406,3 +406,7 @@ html:has([data-fullscreen="fullscreenoverlay"]) .ck.ck-dropdown__panel.ck-dropdo
 .lp-builder a.lpb-btn:hover {
   border-color: #000;
 }
+
+.ui-dialog .ui-dialog-content {
+  overscroll-behavior: contain;
+}
